mtls/vs-1.yaml
# http passthrough, tls passthrough
#
# ➜ curl http://valet-test.com/http -H "Host: valet-test.com" --resolve valet-test.com:80:35.227.127.150
#This is an example http server.
#
#&{GET /http HTTP/1.1 1 1 map[Accept:[*/*] Content-Length:[0] User-Agent:[curl/7.54.0] X-Envoy-Expected-Rq-Timeout-Ms:[15000] X-Forwarded-Proto:[http] X-Request-Id:[2989d6b0-271d-4622-bdc3-4a8fd70196c7]] {} <nil> 0 [] false valet-test.com map[] map[] <nil> map[] 10.52.1.64:46332 /http <nil> <nil> <nil> 0xc00005c180}
#
#➜ curl https://valet-test.com/https -H "Host: valet-test.com" --resolve valet-test.com:443:35.227.127.150 --cacert rootCA.crt
#Client sent an HTTP request to an HTTPS server.

apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: http
  namespace: valet-test-server
spec:
  virtualHost:
    domains:
      - "valet-test.com"
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: valet-test-server-valet-test-server-80
              namespace: gloo-system
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: https
  namespace: valet-test-server
spec:
  sslConfig:
    secretRef:
      name: valet-test.com
      namespace: valet-test-server
  virtualHost:
    domains:
      - "valet-test.com"
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: valet-test-server-valet-test-server-443
              namespace: gloo-system
