mtls/vs-2.yaml
#➜ curl http://valet-test.com/http -H "Host: valet-test.com" --resolve valet-test.com:80:35.227.127.150
#This is an example http server.
#
#&{GET /http HTTP/1.1 1 1 map[Accept:[*/*] Content-Length:[0] User-Agent:[curl/7.54.0] X-Envoy-Expected-Rq-Timeout-Ms:[15000] X-Forwarded-Proto:[http] X-Request-Id:[9ae73438-14ee-4348-8a89-62fb01b46734]] {} <nil> 0 [] false valet-test.com map[] map[] <nil> map[] 10.52.1.64:46332 /http <nil> <nil> <nil> 0xc00009e300}
#
#➜ curl https://valet-test.com/https -H "Host: valet-test.com" --resolve valet-test.com:443:35.227.127.150 --cacert rootCA.crt
#This is an example https server.
#
#&{GET /https HTTP/1.1 1 1 map[Accept:[*/*] Content-Length:[0] User-Agent:[curl/7.54.0] X-Envoy-Expected-Rq-Timeout-Ms:[15000] X-Forwarded-Proto:[https] X-Request-Id:[6e1ec884-e170-4ebd-9b8a-c17b11aa4a25]] {} <nil> 0 [] false valet-test.com map[] map[] <nil> map[] 10.52.1.64:55510 /https 0xc0000b4370 <nil> <nil> 0xc00009e480}

apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: http
  namespace: valet-test-server
spec:
  virtualHost:
    domains:
      - "valet-test.com"
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: valet-test-server-valet-test-server-80
              namespace: gloo-system
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: https
  namespace: valet-test-server
spec:
  sslConfig:
    secretRef:
      name: valet-test.com
      namespace: valet-test-server
  virtualHost:
    domains:
      - "valet-test.com"
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: valet-test-server-valet-test-server-443-fixed
              namespace: gloo-system
