mtls/vs-3.yaml
# ➜ curl http://valet-test.com/http -H "Host: valet-test.com" --resolve valet-test.com:80:35.227.127.150
# This is an example https server.
#
#&{GET /http HTTP/1.1 1 1 map[Accept:[*/*] Content-Length:[0] User-Agent:[curl/7.54.0] X-Envoy-Expected-Rq-Timeout-Ms:[15000] X-Forwarded-Proto:[http] X-Request-Id:[38083ccb-fbd9-455b-a9fd-3ff05997bc4e]] {} <nil> 0 [] false valet-test.com map[] map[] <nil> map[] 10.52.1.64:55586 /http 0xc00010c210 <nil> <nil> 0xc00005c340}
#
# ➜ curl https://valet-test.com/https -H "Host: valet-test.com" --resolve valet-test.com:443:35.227.127.150 --cacert rootCA.crt
#This is an example https server.
#
#&{GET /https HTTP/1.1 1 1 map[Accept:[*/*] Content-Length:[0] User-Agent:[curl/7.54.0] X-Envoy-Expected-Rq-Timeout-Ms:[15000] X-Forwarded-Proto:[https] X-Request-Id:[958bc78d-ec52-4b66-ac84-7764ea2a7d72]] {} <nil> 0 [] false valet-test.com map[] map[] <nil> map[] 10.52.1.64:55510 /https 0xc0000b4370 <nil> <nil> 0xc00005c380}

apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: http
  namespace: valet-test-server
spec:
  virtualHost:
    domains:
      - "valet-test.com"
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: valet-test-server-valet-test-server-443-fixed
              namespace: gloo-system
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: https
  namespace: valet-test-server
spec:
  sslConfig:
    secretRef:
      name: valet-test.com
      namespace: valet-test-server
  virtualHost:
    domains:
      - "valet-test.com"
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: valet-test-server-valet-test-server-443-fixed
              namespace: gloo-system
