mtls/vs-4.yaml
#➜ curl http://valet-test.com/ -H "Host: valet-test.com" --resolve valet-test.com:80:35.227.127.150
#This is an example https server.
#
#&{GET / HTTP/1.1 1 1 map[Accept:[*/*] Content-Length:[0] User-Agent:[curl/7.54.0] X-Envoy-Expected-Rq-Timeout-Ms:[15000] X-Forwarded-Proto:[http] X-Request-Id:[c3ebcbfc-ece7-4eec-89ff-aaabfa04f04f]] {} <nil> 0 [] false valet-test.com map[] map[] <nil> map[] 10.52.1.64:55510 / 0xc0000b4370 <nil> <nil> 0xc00009e4c0}
#
#➜ curl https://valet-test.com/https -H "Host: valet-test.com" --resolve valet-test.com:443:35.227.127.150 --cacert rootCA.crt
#This is an example http server.
#
#&{GET /https HTTP/1.1 1 1 map[Accept:[*/*] Content-Length:[0] User-Agent:[curl/7.54.0] X-Envoy-Expected-Rq-Timeout-Ms:[15000] X-Forwarded-Proto:[https] X-Request-Id:[79eed4ac-80ea-4e93-9eb5-8e6c7ff348e4]] {} <nil> 0 [] false valet-test.com map[] map[] <nil> map[] 10.52.1.64:46882 /https <nil> <nil> <nil> 0xc00005c480}
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: http
  namespace: valet-test-server
spec:
  virtualHost:
    domains:
      - "valet-test.com"
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: valet-test-server-valet-test-server-443-fixed
              namespace: gloo-system
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: https
  namespace: valet-test-server
spec:
  sslConfig:
    secretRef:
      name: valet-test.com
      namespace: valet-test-server
  virtualHost:
    domains:
      - "valet-test.com"
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: valet-test-server-valet-test-server-80
              namespace: gloo-system
