mtls/vs.https.valet-test2.com-sni-fixed.yaml
# ➜ curl https://valet-test2.com/ --resolve valet-test2.com:80:35.227.127.150 --resolve valet-test2.com:443:35.227.127.150 --cacert test-server/rootCA.crt
#This is an example http server.
#
#&{GET / HTTP/1.1 1 1 map[Accept:[*/*] Content-Length:[0] User-Agent:[curl/7.54.0] X-Envoy-Expected-Rq-Timeout-Ms:[15000] X-Forwarded-Proto:[https] X-Request-Id:[02c81bc7-2cf9-49ef-bcda-f2fb58196cf7]] {} <nil> 0 [] false valet-test2.com map[] map[] <nil> map[] 10.52.1.92:34364 / <nil> <nil> <nil> 0xc00018e540}

apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: https.valet-test2.com
  namespace: valet-test-server
spec:
  sslConfig:
    secretRef:
      name: tls.valet-test2.com # use correct certificates
      namespace: valet-test-server
    sniDomains:
      - valet-test2.com
  virtualHost:
    domains:
      - "valet-test2.com"
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: http
              namespace: valet-test-server
